--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5';
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.github.KwabenBerko:News-API-Java:1.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
